--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a class="nav-logo" href="https://www.microclub.net/">
           <img src="images/MC.svg" alt="" class="main-nav-img" />
         </a>
-        <div class="main-nav-elem">
+        <div class="main-nav-elem pad">
           <button class="menu button secondary">
             <img src="./images/bars-solid.svg" alt="">
           </button>
